Closed Bug 38396 Opened 26 years ago Closed 25 years ago

As it loads, the page gets pushed off the right side of screen, and then jumps back at the end!

Categories

(Core :: Layout, defect, P3)

x86
Windows 95
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: wd, Assigned: buster)

References

()

Details

(Keywords: testcase, Whiteboard: block max width)

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Win95; en-US; m16) Gecko/20000505 BuildID: 2000050513 As the page is loading up, it gets pushed off the right side of the screen, and then once it's done, it jumps back to normal. Reproducible: Always Steps to Reproduce: 1.Go to http://www.avis.com/avis_deals/specials/compact_2000.html 2. 3. Actual Results: Page gets pushed off right side of screen Expected Results: page remains centered.
Attached file test case
Confirming. (reproduced on Windows 98 with build 2000 050513) Notes on testcase: 1. The problem seems to be caused by putting an IMG WIDTH="100%" inside a table cell with something else. The image tries to be the size of the cell, causing the cell to expand, which makes the image bigger again, etc. 2. The image eventually stops getting bigger and suddenly disappears. 3. Replacing "foo" with "foo bar" makes each reflow push the table out more 4. The bug is reproducable 80% of the time. Once it stops being reproducable, restarting mozilla makes it reproducable again. 5. Mozilla is still responsive while the table expands (some similar bugs have made mozilla unresponsive, see bug 30942), so this isn't a high-severity bug.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
chris: low priority, could you see if this is another incremental reflow "block max width" bug?
Assignee: troy → karnaze
Buster, in the attachment, the maximum width requested during the incremental reflow is not the same as the first unconstrained reflow. But an image is involved.
Assignee: karnaze → buster
Whiteboard: block max width
1) the image frame is broken. it doesn't handle images with percent widths and fixed heights very well. I have a fix for this now.
Status: NEW → ASSIGNED
Whiteboard: block max width → block max width, fix in hand
along with fixes in incremental preferred width calculation, I also fixed some image frame and image loader bugs having to do with images that have a fixed height and a percentage width.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Whiteboard: block max width, fix in hand → block max width
Fixed in the July 6th build.
Status: RESOLVED → VERIFIED
Blocks: 39901
re-opening so qa can re-verify with the new fix to bug 39901
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 26 years ago25 years ago
Resolution: --- → FIXED
fix checked in 9/11/00 r=karnaze
VERIFIED FIXED using Windows 2000 commercial build 2000092508.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: