bug 38396, a bug in max width calculation exposed by tables